# EmptySearcher

./: README.md  pyproject.toml
.github/workflows/: build-release.yml
src/emptysearcher/: __init__.py  app.py  config.py  scanner.py
src/emptysearcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/emptysearcher/ui/: __init__.py  main_window.py
tests/: test_scanner.py
