[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emptysearcher"
version = "0.1.0"
description = "Cross-platform desktop app to find and remove effectively empty folders."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "Send2Trash>=1.8.3",
]

[project.scripts]
emptysearcher = "emptysearcher.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
